# smartcar-simulation

./: .clang-format  .gitignore  README.md  build.sh  start_gazebo.sh  start_localisation.sh  start_nav2.sh  start_rviz.sh
docs/: Robotics Architecture Final Assignment Document.odt
smartcar_msgs/: package.xml
smartcar_simulation/: CMakeLists.txt  package.xml
smartcar_simulation/config/: ekf.yaml
smartcar_simulation/include/smartcar_simulation/: joint_state_publisher.hpp  wheel_odometer.hpp  wheel_odometry.hpp
smartcar_simulation/launch/: gazebo.launch.py  localization.launch.py  nav2.launch.py  smartcar.launch.py
smartcar_simulation/rviz/: odometry_config.rviz  urdf_config.rviz
smartcar_simulation/src/: joint_state_publisher.cpp  main.cpp  main_state_publisher.cpp  wheel_odometer.cpp  wheel_odometry.cpp
smartcar_simulation/urdf/: materials.xacro  sensors.xacro  smartcar.urdf  smartcar.urdf.xacro  wheels.xacro
smartcar_simulation/urdf backup/: materials.xacro  sensors.xacro
